# quantum_density_matrix_truncation

./: .gitignore  RUNME1.py  RUNME2.py  RUNME3.py  RUNME4.py  pyproject.toml
benchmarks/: test_evolved_hilbert_schmidt.py  test_evolved_hilbert_schmidt_naive.py  test_power_scaling_with_D.py  test_power_scaling_with_L.py  test_transfer_matrix.py  test_trotterized_cost.py  test_trotterized_transfer_matrix.py
benchmarks/helpers/: cost.py  transfer_matrix.py
data/07-21/: bond_dimension_4-length_4.npz
data/07-22/: bond_dimension_4-length_16.npz  bond_dimension_4-length_4.npz  bond_dimension_4-length_8.npz  bond_dimension_6-length_4.npz
data/07-23/: bond_dimension_6-length_4.npz
data/07-24/: bond_dimension_8-length_16-2.npz  bond_dimension_8-length_16.npz  bond_dimension_8-length_8.npz
data/07-25/: XXZ_bond_dimension_4-L_4.npz  XXZ_bond_dimension_4-L_8.npz  bond_dimension_8-length_16-2.npz
data/07-26/: D_8-L_4.npz  D_8-L_8.npz  bond_dimension_8-length_16.npz
data/07-30/: D_4-L_04.npz  D_4-L_16.npz  D_8-L_04.npz  D_8-L_08.npz
data/LoSchmidt/: 2025-07-02 17:00:52.817045.npy  2025-07-02 17:13:10.005619.npy  2025-07-02 17:35:11.027570.npy  2025-07-02 18:43:37.540243.npy  2025-07-02 18:50:06.783166.npy  2025-07-02 18:58:07.569698.npy  2025-07-02 21:51:04.010687.npy  2025-07-10 14:31:23.318650.npy  2025-07-10 18:13:37.674522.npy  g11.5g20.2D4L4.npy  g1_1.5-g2_0.2-D_4-L_4.npy  g1_1.5-g2_0.2-D_4-L_8.npy
data/ground_state/: gstate_ising2_D2_g0.1.npy  gstate_ising2_D2_g0.2.npy  (+103 more)
src/: cost.py  derivative.py  fixed_point.py  gradient.py  lo_schmidt.py  optimisation.py  tempCodeRunnerFile.py  transfer_matrix.py  uniform_MPS.py
tests/: test_cost.py  test_geometry.py  test_mps.py  test_uniform_MPS.py
(+56 files in other folders)
