[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_density_matrix_truncation"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "ncon",
    "matplotlib",
]

[project.scripts]
run-schmidt-echo = "qdmt.cli:run_simulation"
plot-schmidt-echo = "qdmt.cli:plot_results"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]