[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_density_matrix_truncation"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "ncon",
    "matplotlib",
]

[project.scripts]
evolve-state = "qdmt.evolve:run_simulation"
plot-schmidt-echo = "qdmt.cli:plot_results"
annotate-transverse-field = "analysis.annotate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]