[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_density_matrix_truncation"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "ncon",
    "matplotlib",
]

[project.scripts]
evolve-state = "qdmt.evolve:run_simulation"
plot-schmidt-echo = "analysis.lo_schmidt_echo:main"
plot-transverse-magnetisation = "analysis.transverse_magnetisation:main"
annotate-transverse-field = "analysis.annotate:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]